@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-27T08:29:34Z",
-  "count" : 3,
+  "timestamp" : "2022-09-27T16:28:46Z",
+  "count" : 1,
   "count_minmax" : [ 1, 4 ],
-  "count_decinc" : [ -1, +4 ],
+  "count_decinc" : [ -3, +4 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
