@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-27T08:29:34Z",
+  "timestamp" : "2022-09-27T16:28:46Z",
   "count_outdated" : 540,
   "uniques_outdated" : 312,
-  "count" : 574,
+  "count" : 573,
   "uniques" : 331,
   "clones" : [
     {
       "timestamp": "2022-09-13T00:00:00Z",
-      "count": 3,
+      "count": 1,
       "count_minmax": [ 1, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-09-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
