@@ -1,10 +1,10 @@
 {
-  "count": 34,
+  "count": 33,
   "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-09-13T00:00:00Z",
-      "count": 3,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-09-27T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
