@@ -1,3 +1,11 @@
+2022-09-27T16:28:46Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3137304038
+* notice: last 14d: unq all: 5 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 312 540 / 331 574
+* notice: next accum: outdated-unq outdated-all / unq all: 312 540 / 331 573
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -2 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-13 2022-09-27]
+
 2022-09-27T08:29:34Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3134090954
 * notice: last 14d: unq all: 5 34
